--- a/Citacao.bib
+++ b/Citacao.bib
@@ -1,7 +1,7 @@
 @dataset{roberto_monteiro_dias_2022_6621716,
   author       = {Roberto Monteiro Dias},
-  title        = {{Ontologia para o Gerenciamento de Segurança da 
-                   Informação em Sistemas-de-Sistemas}},
+  title        = {{SegInfoSoS - Ontologia para o Gerenciamento de 
+                   Segurança da Informação em Sistemas-de-Sistemas}},
   month        = jun,
   year         = 2022,
   publisher    = {Zenodo},
